// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../Drawer <Drawer /> (is desktop false, is open false) should render 1`] = `
<div
  className="lib-react-app_drawer-children({\\"theme.breakpoints.up('md')\\":{\\"marginLeft\\":\\"theme.spacing(32)\\"}})"
>
  <div
    ModalProps={
      Object {
        "keepMounted": true,
      }
    }
    className="MuiDrawer"
    classes={
      Object {
        "paper": "lib-react-app_drawer-paper({\\"width\\":\\"theme.spacing(32)\\",\\"paddingLeft\\":0,\\"paddingRight\\":0})",
      }
    }
    id="lib-react-app_drawer"
    onClose="props.onClose()"
    open={false}
    variant="temporary"
  >
    <div
      className="Toolbar"
    >
      <div
        className="lib-react-app_drawer-flexibleSpace({\\"flex\\":\\"0 1 100%\\"})"
      />
      <div
        className="CloseButton"
        isDesktop={false}
        onClick="props.onClose()"
        t="t()"
      />
    </div>
    <div
      className="Nav"
      onClick="props.onClose()"
      t="t()"
      windowTitle="Window Title"
    />
  </div>
  Client
</div>
`;

exports[`../Drawer <Drawer /> (is desktop false, is open true) should render 1`] = `
<div
  className="lib-react-app_drawer-children({\\"theme.breakpoints.up('md')\\":{\\"marginLeft\\":\\"theme.spacing(32)\\"}})"
>
  <div
    ModalProps={
      Object {
        "keepMounted": true,
      }
    }
    className="MuiDrawer"
    classes={
      Object {
        "paper": "lib-react-app_drawer-paper({\\"width\\":\\"theme.spacing(32)\\",\\"paddingLeft\\":0,\\"paddingRight\\":0})",
      }
    }
    id="lib-react-app_drawer"
    onClose="props.onClose()"
    open={true}
    variant="temporary"
  >
    <div
      className="Toolbar"
    >
      <div
        className="lib-react-app_drawer-flexibleSpace({\\"flex\\":\\"0 1 100%\\"})"
      />
      <div
        className="CloseButton"
        isDesktop={false}
        onClick="props.onClose()"
        t="t()"
      />
    </div>
    <div
      className="Nav"
      onClick="props.onClose()"
      t="t()"
      windowTitle="Window Title"
    />
  </div>
  Client
</div>
`;

exports[`../Drawer <Drawer /> (is desktop true, is open false) should render 1`] = `
<div
  className="lib-react-app_drawer-children({\\"theme.breakpoints.up('md')\\":{\\"marginLeft\\":\\"theme.spacing(32)\\"}})"
>
  <div
    className="MuiDrawer"
    classes={
      Object {
        "paper": "lib-react-app_drawer-paper({\\"width\\":\\"theme.spacing(32)\\",\\"paddingLeft\\":0,\\"paddingRight\\":0})",
      }
    }
    variant="permanent"
  >
    <div
      className="Toolbar"
    >
      <div
        className="lib-react-app_drawer-flexibleSpace({\\"flex\\":\\"0 1 100%\\"})"
      />
      <div
        className="CloseButton"
        isDesktop={true}
        onClick="props.onClose()"
        t="t()"
      />
    </div>
    <div
      className="Nav"
      onClick="props.onClose()"
      t="t()"
      windowTitle="Window Title"
    />
  </div>
  Client
</div>
`;

exports[`../Drawer <Drawer /> (is desktop true, is open true) should render 1`] = `
<div
  className="lib-react-app_drawer-children({\\"theme.breakpoints.up('md')\\":{\\"marginLeft\\":\\"theme.spacing(32)\\"}})"
>
  <div
    className="MuiDrawer"
    classes={
      Object {
        "paper": "lib-react-app_drawer-paper({\\"width\\":\\"theme.spacing(32)\\",\\"paddingLeft\\":0,\\"paddingRight\\":0})",
      }
    }
    variant="permanent"
  >
    <div
      className="Toolbar"
    >
      <div
        className="lib-react-app_drawer-flexibleSpace({\\"flex\\":\\"0 1 100%\\"})"
      />
      <div
        className="CloseButton"
        isDesktop={true}
        onClick="props.onClose()"
        t="t()"
      />
    </div>
    <div
      className="Nav"
      onClick="props.onClose()"
      t="t()"
      windowTitle="Window Title"
    />
  </div>
  Client
</div>
`;

exports[`../Drawer should use the right versions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "prop-types": "^15.7.2",
  "react": "^16.10.1",
}
`;
